# Subscription

./: .gitignore  CLAUDE.md  Cargo.toml  dfx.json
.github/workflows/: ci.yml
canister/: Cargo.toml  build.rs  subscription.did
canister/examples/: participant.rs
canister/src/: api.rs  auth.rs  lib.rs  sign.rs
canister/tests/: g2.rs  g3.rs
canister/tests/common/: mod.rs
config/: mainnet.toml  testnet.toml
docs/: build-plan.md  game-spec.md  post-game.md  standards.md
e2e/solana-driver/: Cargo.toml
e2e/solana-driver/src/: main.rs
logic/: Cargo.toml
logic/src/: lib.rs  schedule.rs
scripts/: e2e-devnet.sh  lint-boundaries.sh  test-canister.sh
