# Devnet chain driver for the e2e (scripts/e2e-devnet.sh). Not a workspace
# member: it exists only to send the transactions the game itself never sends —
# create_escrow, release/cancel with the canister's signature, refund.
[package]
name = "e2e-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
factory = { package = "stream-factory", path = "../../../../Crown-Factory/shapes/stream/solana/programs/factory", features = ["no-entrypoint"] }
splitter = { path = "../../../../Crown-Core/contracts/solana/programs/splitter", features = ["no-entrypoint"] }
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-rpc-client = "2.1"
solana-sdk = "2.1"
hex = "0.4"

[workspace]
